clusters/home/apps/cloud/garage/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    goldilocks.fairwinds.com/enabled: "true"
