clusters/home/apps/cloud/garage/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: garage
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3
  namespace: garage
  annotations:
    external-dns.kubernetes.io/hostname: "s3.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`s3.layertwo.dev`)
    kind: Rule
    services:
    - name: garage-truenas
      port: s3
      serversTransport: garage-transport
  tls:
    secretName: s3-layertwo-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3-wildcard
  namespace: garage
  annotations:
    external-dns.kubernetes.io/hostname: "*.s3.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "external"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostRegexp(`^[^.]+\.s3\.layertwo\.dev$`)
    kind: Rule
    services:
    - name: garage-truenas
      port: s3
      serversTransport: garage-transport
  tls:
    secretName: s3-layertwo-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3-website
  namespace: garage
  annotations:
    external-dns.kubernetes.io/hostname: "*.s3-website.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "external"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostRegexp(`^[^.]+\.s3-website\.layertwo\.dev$`)
    kind: Rule
    middlewares:
    - name: compress
    services:
    - name: garage-truenas
      port: web
      serversTransport: garage-transport
  tls:
    secretName: s3-website-layertwo-dev-tls
